@@ -46,7 +46,7 @@ DAMAGE.
 
 <title>The Linux-PAM System Administrators' Guide
 <author>Andrew G. Morgan, <tt>morgan@kernel.org</tt>
-<date>DRAFT v0.76 2002/05/09
+<date>DRAFT v0.76 2002/05/26
 <abstract>
 This manual documents what a system-administrator needs to know about
 the <bf>Linux-PAM</bf> library. It covers the correct syntax of the
@@ -366,7 +366,7 @@ A general configuration line of the <tt>/etc/pam.conf</tt> file has
 the following form:
 <tscreen>
 <verb>
-service-name   module-type   control-flag   module-path   arguments
+service-name   module-type   control-flag   module-path   args
 </verb>
 </tscreen>
 Below, we explain the meaning of each of these tokens. The second (and
@@ -574,6 +574,26 @@ module. Invalid arguments are ignored by a module, however, when
 encountering an invalid argument, the module is required to write an
 error to <tt/syslog(3)/. For a list of <em/generic/ options see the
 next section.
+
+Note, if you wish to include spaces in an argument, you should
+surround that argument with square brackets. For example:
+<tscreen>
+<verb>
+squid auth required pam_mysql.so user=passwd_query passwd=mada \
+        db=eminence [query=select user_name from internet_service where \
+                     user_name='%u' and password=PASSWORD('%p') and \
+                     service='web_proxy']
+</verb>
+</tscreen>
+Note, when using this convention, you can include `<tt/[/' characters
+inside the string, and if you wish to include a `<tt/]/' character
+inside the string that will survive the argument parsing, you should
+use `<tt/\[/'. In other words:
+<tscreen>
+<verb>
+[..[..\]..]    -->   ..[..]..
+</verb>
+</tscreen>
 
 </descrip>
 
